<resources>
    <string name="app_name">VK 2021: Final</string>
    <integer name="com_vk_sdk_AppId">7901821</integer>

    <string name="rss">RSS-данные о подкасте</string>
    <string name="json">Информация о реакциях в формате JSON (опционально)</string>
    <string name="tech_info">Введите URL здесь или выберите файл</string>

    <string name="open_file">Открыть файл</string>
    <string name="can_open1">Можно открывать файлы: .rss</string>
    <string name="can_open2">Можно открывать файлы: .json</string>

    <string name="auth_vk">Войти ВКонтакте</string>
    <string name="go_to_listen">Вперед, слушать подкаст</string>

    <string name="more_emoji">Больше реакций</string>
    <string name="loading">Загрузка...</string>
    <string name="reactions">Реакции</string>
    <string name="analytics">Статистика</string>
    <string name="react_types">Виды реакций</string>
    <string name="ages">Пол и возраст</string>
    <string name="cities">Города</string>

    <string name="men">Мужчины</string>
    <string name="women">Женщины</string>

    <string name="rss_default_link">https://vk.com/podcasts-147415323_-1000000.rss</string>
    <string name="json_default_link">https://www.dropbox.com/s/b5uuko4vyiles97/podcast.json</string>

</resources>